--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ header{
 /* textareas + btn */
 
 textarea{
-    border: none;
+    border: 2px solid black;
     resize: none;
     padding: 10px;
     margin: 0 0 20px 0;
@@ -70,7 +70,12 @@ button{
     font-size: 20px;
     font-weight: 600;
 }
-
+.reply-btn {
+    width: 25%;
+    padding: 5px;
+    font-size: 15px;
+    margin-left: 70%;
+} 
 /* tweet */
 
 .tweet{
